# vlm-robot-navigation

./: .gitignore  LICENSE  README.md
robot_vqa/: QUICKSTART.md  README.md  package.xml  requirements.txt  setup.cfg  setup.py  test_image_publisher.py
robot_vqa/config/: vqa_params.yaml
robot_vqa/launch/: vqa_system.launch.py
robot_vqa/robot_vqa/: blip2_model.py  vqa_client.py  vqa_node.py
robot_vqa_interfaces/: CMakeLists.txt  package.xml
robot_vqa_interfaces/srv/: AskQuestion.srv
